# scitex-str

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ci/: build-in-sif.sh  exec-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-str-quality-audit-on-ubuntu-latest.yml  test.yml  tests-minimal-on-ubuntu-py3-12.yml
.scitex/dev/: config.yaml
docs/sphinx/: conf.py  index.rst  installation.rst
examples/: quickstart.py
src/scitex_str/: __init__.py  _format_plot_text.py  _latex_fallback.py  _replace.py  _search.py  _title_case.py
src/scitex_str/_ansi/: __init__.py
src/scitex_str/_case/: __init__.py
src/scitex_str/_latex/: __init__.py
src/scitex_str/_mask/: __init__.py
src/scitex_str/_plot/: __init__.py  _format_plot_text.py
src/scitex_str/_print/: __init__.py  _print_block.py  _printc.py
src/scitex_str/_search/: __init__.py  _parse.py  _search.py
src/scitex_str/_skills/scitex-str/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_python-api.md  11_python-api.md  SKILL.md
src/scitex_str/_sphinx_html/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_str/_sphinx_html/.doctrees/: environment.pickle  index.doctree  installation.doctree  quickstart.doctree
src/scitex_str/_sphinx_html/.doctrees/api/: scitex_str.doctree
src/scitex_str/_sphinx_html/_modules/: index.html
src/scitex_str/_sphinx_html/_modules/scitex_str/: _clean_path.html  _color_text.html  _decapitalize.html  _factor_out_digits.html  _format_plot_text.html  _grep.html  _latex.html  _latex_fallback.html  _mask_api_key.html  _parse.html  _print_debug.html  _printc.html  _readable_bytes.html  _remove_ansi.html  _replace.html  _search.html  _squeeze_space.html  _title_case.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_ansi/: _color_text.html  _remove_ansi.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_case/: _decapitalize.html  _title_case.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_latex/: _latex.html  _latex_fallback.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_mask/: _mask_api_key.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_plot/: _factor_out_digits.html  _format_plot_text.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_print/: _print_debug.html  _printc.html
src/scitex_str/_sphinx_html/_modules/scitex_str/_search/: _grep.html  _parse.html  _replace.html  _search.html
src/scitex_str/_sphinx_html/_sources/: installation.rst.txt  quickstart.rst.txt
src/scitex_str/_sphinx_html/_sources/api/: scitex_str.rst.txt
src/scitex_str/_sphinx_html/api/: scitex_str.html
tests/: conftest.py  test_str.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_cross_package_imports.py  test_examples.py  test_str.py
tests/scitex_str/: test__squeeze_space.py
tests/scitex_str/_ansi/: test__color_text.py
tests/scitex_str/_case/: test__decapitalize.py
tests/scitex_str/_latex/: test__latex.py
tests/scitex_str/_mask/: test__mask_api.py
tests/scitex_str/_plot/: test__factor_out_digits.py
tests/scitex_str/_print/: test__printc.py
tests/scitex_str/_search/: test__search.py
