[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-str"
version = "0.1.9"
description = "Text processing utilities for scientific workflows — LaTeX formatting, colored output, string parsing, and plot text helpers"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "text",
    "string",
    "latex",
    "formatting",
    "scientific",
    "parsing",
    "color",
    "terminal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
]
dependencies = [
    # Hard tier — every public surface (Python API + Skills) must start
    # from `pip install scitex-str` alone. See
    # ~/.claude/skills/scitex/general/05_development_11_dependency-tiers.md
    "scitex-dev>=0.11.7",  # try_import_optional, skills/docs entry-points, ecosystem audits
    "scitex-logging",      # lazy-imported logger in _latex_fallback (always hard per skill rule)
    "scitex-dict>=0.1.0",  # DotDict — top-level import in _parse / _replace
    "natsort",             # natsorted — top-level import in _search
    "numpy",               # top-level import in _search / _factor_out_digits
]

[project.optional-dependencies]
# Tier 2 — `pip install scitex-str[all]` unlocks all graceful-degradation
# paths (pandas/xarray-aware search inputs, matplotlib-backed LaTeX
# rendering / tick formatting). Each dep is gated by try_import_optional
# or function-scope import; the package still imports cleanly without them.
all = [
    "matplotlib",  # _latex_fallback.check_latex_capability, smart_tick_formatter
    "pandas",      # _search: accept pd.Series / pd.Index as input
    "xarray",      # _search: accept xr.DataArray as input
]

# Tier 3 — maintainer tools only. Not pulled in by [all]. Hard-tier deps
# (numpy, scitex-dev, ...) are not duplicated here; `pip install -e ".[dev]"`
# walks the default set automatically.
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=3.5.0",
    # Docs build (folded in from the now-removed [docs] fragmented extra)
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]

[project.entry-points."scitex_dev.docs"]
scitex-str = "scitex_str"

[project.entry-points."scitex_dev.skills"]

scitex-str = "scitex_str"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-str"
Documentation = "https://scitex-str.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-str.git"
Issues = "https://github.com/ywatanabe1989/scitex-str/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_str"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=scitex_str --cov-report=term-missing"

[tool.coverage.run]
parallel = true
source = ["scitex_str"]
concurrency = ["multiprocessing", "thread"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]
